--- a/src/components/All.css
+++ b/src/components/All.css
@@ -37,3 +37,9 @@
   .not-found-link:hover {
     color: #0056b3;
   }
+  .img-style{
+    width:300px;
+    height:300px;
+    object-fit:cover;
+
+  }
